# ditto-factory

./: .gitignore  LICENSE  README.md  docker-compose.yaml  onboard-wiring-plan.md  package-lock.json
controller/: Makefile  pyproject.toml
controller/.claude-flow/data/: pending-insights.jsonl
controller/migrations/: 002_skill_registry.sql  003_skill_embeddings.sql  004_workflow_engine.sql  005_job_resolution_diagnostics.sql
controller/seeds/: seed.py  seed_templates.py  skills.json  workflow_templates.json
controller/seeds/skills/: a11y-audit.md  api-design.md  code-review.md  css-review.md  db-migration.md  dockerfile-review.md  react-debug.md  (+3 more)
controller/tests/: conftest.py  test_api.py  test_artifact_storage.py  test_async_spawner.py  test_codebase_analysis_workflow.py  test_config.py  test_e2e.py  test_e2e_skill_pipeline.py  test_embedding.py  test_entrypoint_routing.py  test_gateway.py  test_gateway_wiring.py  test_integration_report_types.py  test_intent_classifier.py  test_main.py  test_models.py  test_models_task_types.py  test_open_questions.py  test_orchestrator.py  test_orchestrator_task_type.py  test_performance_tracker.py  test_prompt_builder.py  test_prompt_task_type.py  test_quality_checks.py  test_report_step.py  test_safety_dispatch.py  test_sanitize.py  test_seed_skills.py  test_seed_templates.py  test_semantic_search.py  test_skill_api.py  test_skill_models.py  test_skill_services.py  test_spawner_resources.py  test_subagent.py  test_swarm_config.py  test_swarm_manager.py  test_swarm_models.py  test_swarm_monitor.py  test_swarm_redis_streams.py  (+11 more)
(+606 files in other folders)
