[project]
name = "ditto-factory"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.30",
    "redis>=5.0",
    "kubernetes>=31.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "fakeredis[lua]>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/controller"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
